<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/planetImageId"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/planet_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/planetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/planet_name"
        android:textColor="@color/PRIMARY_BLACK"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/planetImageId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moonCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/moon_count"
        android:textColor="@color/PRIMARY_BLACK"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/planetName"
        app:layout_constraintTop_toBottomOf="@+id/planetName" />
</androidx.constraintlayout.widget.ConstraintLayout>